FIR-32147: fixed DatabaseMetadata when connecting to system engine